testing fix form elements on mobile

--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,8 @@ button {
 .datalist,
 .search,
 .form-dropdown {
+  background: #ffffff;
+  border-radius: 0;
   outline: none;
   border: 3px solid #221e72;
   font-size: 1rem;
